--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,16 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.drum-pads{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 50%;
 }
-
-.App-link {
-  color: #61dafb;
+.drum-pad{
+  width: 33.3333333%;
+  flex-basis: 33.3333333%;
+  height: 50px;
+  background: #10dae4;
+  border-radius: 5px;
+  margin: 5px;
+  box-shadow: 0px 0px 25px -3px rgba(0, 0, 0, 0.14);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.drum-pad:active{
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0)
 }
