--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,46 @@
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+}
+
+.drum-machine{
+  padding: 60px 200px;
+  background: #232323;
+}
 .drum-pads{
   display: flex;
-  width: 50%;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 .drum-pad{
-  width: 33.3333333%;
-  flex-basis: 33.3333333%;
-  height: 50px;
-  background: #10dae4;
+  width: calc(33.3333333% - 30px);
+  flex: 0 0 calc(33.3333333% - 30px);
+  height: 150px;
+  line-height: 150px;
+  /* background: #10dae4; */
+  background: #232323;
   border-radius: 5px;
-  margin: 5px;
-  box-shadow: 0px 0px 25px -3px rgba(0, 0, 0, 0.14);
+  margin: 15px;
+  box-shadow: 0px 3px 1px 4px rgba(255, 45, 45, 0.8);
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  color: #fff;
 }
 .drum-pad:active{
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0)
+  transform: translateY(3px);
+  box-shadow: 0px 1px 1px 2px rgba(255, 45, 45, 0.8);
+}
+/* This prevent the span element to be triggered in javascript instead of its parent */
+.drum-pad span{
+  pointer-events: none; 
+}
+.display{
+  color: #fff;
+  font-weight: bold;
+  font-size: 25px;
+  text-align: center;
+  padding: 30px;
+  background: #10dae4;
 }
