--- a/src/App.css
+++ b/src/App.css
@@ -22,16 +22,15 @@
   background: #232323;
   border-radius: 5px;
   margin: 15px;
-  box-shadow: 0px 3px 1px 4px rgba(255, 45, 45, 0.8);
   text-align: center;
   font-weight: bold;
   font-size: 30px;
   color: #fff;
 }
-.drum-pad:active{
+/* .drum-pad:active{
   transform: translateY(3px);
   box-shadow: 0px 1px 1px 2px rgba(255, 45, 45, 0.8);
-}
+} */
 /* This prevent the span element to be triggered in javascript instead of its parent */
 .drum-pad span{
   pointer-events: none; 
